@@ -97,6 +97,22 @@ The ``register_link_type`` method allows you to define a function to be called w
     def register_report_link(features):
         features.register_link_type('report', report_link_handler)
 
+It is also possible to define link rewrite handler for Wagtail’s built-in ``external`` and ``email`` links, even though they do not have a predefined ``linktype``. For example, if you want external links to have a ``rel="nofollow"`` attribute for SEO purposes:
+
+.. code-block:: python
+
+    from django.utils.html import escape
+    from wagtail.core import hooks
+
+    def external_link_handler(attrs):
+        href = attrs["href"]
+        return '<a href="%s" rel="nofollow">' % escape(href)
+
+    @hooks.register('register_rich_text_features')
+    def register_external_link(features):
+        features.register_link_type('external', external_link_handler)
+
+Similarly you can use ``email`` linktype to add a custom rewrite handler for email links (e.g. to obfuscate emails in rich text).
 
 Embed rewrite handlers
 ----------------------
