@@ -54,6 +54,7 @@ Other features
  * Added name attributes to all built-in page action menu items (LB (Ben Johnston))
  * Added validation on the filter string to the Jinja2 image template tag (Jonny Scholes)
  * Changed the pages reodering UI toggle to make it easier to find (Katie Locke, Thibaud Colas)
+ * Added support for rich text link rewrite handlers for ``external`` and ``email`` links (Md Arifin Ibne Matin)
 
 
 Bug fixes
